--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
