--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.js",
