--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "toko-buku",
+  "name": "katalog-buku",
   "version": "1.0.0",
-  "description": "Toko Buku",
+  "description": "Katalog Buku",
   "main": "index.js",
   "devDependencies": {
     "@babel/core": "^7.5.0",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
